Add Firebase Telemetry, View Tracking, App Footer, and bump version to v3.2.0

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ PublishOutput*/
 *.exe
 publish_v2.3.2/
 DeviceMonitorCS.zip
+
+# Secrets
+DeviceMonitorCS/firebase_config.json
+firebase_config.json
