Fix v3.8.3: Enabled Native Lib Bundling for Single-File Stability

--- a/DeviceMonitorCS/DeviceMonitorCS.csproj
+++ b/DeviceMonitorCS/DeviceMonitorCS.csproj
@@ -6,11 +6,13 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <Version>3.8.2</Version>
+    <Version>3.8.3</Version>
     <ApplicationIcon>app_icon.ico</ApplicationIcon>
     <AssemblyName>AutoCommand</AssemblyName>
     <Product>AutoCommand</Product>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
