Fix Gemini API response error handling and resolve build issues

--- a/DeviceMonitorCS/DeviceMonitorCS.csproj
+++ b/DeviceMonitorCS/DeviceMonitorCS.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>AutoCommand</AssemblyName>
     <Product>AutoCommand</Product>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <DefaultItemExcludes>$(DefaultItemExcludes);UsbTestApp\**;GeminiVerification\**;usb-keyboard.cs;usb-mouse.cs</DefaultItemExcludes>
   </PropertyGroup>
 
   <ItemGroup>
