--- a/DeviceMonitorCS/DeviceMonitorCS.csproj
+++ b/DeviceMonitorCS/DeviceMonitorCS.csproj
@@ -6,7 +6,7 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <Version>3.9.5</Version>
+    <Version>3.9.7</Version>
     <ApplicationIcon>app_icon.ico</ApplicationIcon>
     <AssemblyName>AutoCommand</AssemblyName>
     <Product>AutoCommand</Product>
@@ -18,6 +18,7 @@
 
     <PackageReference Include="System.Management" Version="8.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
   </ItemGroup>
 
   <ItemGroup>
