--- a/DeviceMonitorCS/DeviceMonitorCS.csproj
+++ b/DeviceMonitorCS/DeviceMonitorCS.csproj
@@ -6,7 +6,7 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <Version>3.14.4</Version>
+    <Version>3.14.5</Version>
     <ApplicationIcon>app_icon.ico</ApplicationIcon>
     <AssemblyName>AutoCommand</AssemblyName>
     <Product>AutoCommand</Product>
@@ -23,6 +23,13 @@
 
   <ItemGroup>
     <Resource Include="app_icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\sigcheck64.exe">
+      <Link>sigcheck64.exe</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
